[package]
name = "modalkit"
version = "0.0.16"
edition = "2018"
authors = ["Ulyssa <git@ulyssa.dev>"]
repository = "https://github.com/ulyssa/modalkit"
homepage = "https://github.com/ulyssa/modalkit"
readme = "README.md"
description = "A library for building applications that use modal editing"
license = "Apache-2.0"
exclude = [".github", "CONTRIBUTING.md"]
keywords = ["modal", "readline", "tui", "vim"]
categories = ["command-line-interface", "text-editors"]
rust-version = "1.67"

[features]
default = ["readline", "widgets"]
readline = ["intervaltree"]
widgets = ["tui", "intervaltree"]

[dependencies]
anymap2 = "0.13.0"
arboard = "2.0.1"
derive_more = "0.99.17"
thiserror = "^1.0.37"
crossterm = "0.22.1"
libc = "0.2.150"
tui = { version = "0.21.0", optional = true, package = "ratatui" }
intervaltree = { version = "0.2.6", optional = true }
bitflags = "1.3.2"
nom = "7.1.3"
radix_trie = "0.2.1"
regex = "^1.10.2"
ropey = "1.6.1"
serde = { version = "^1.0", features = ["derive"] }
textwrap = "^0.16"
unicode-segmentation = "^1.7"
unicode-width = "0.1.10"

[dev-dependencies]
rand = "0.8.5"
temp-dir = "0.1.11"
